--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "server": "node server/index.js",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "build:prod": "NODE_ENV=production vite build",
+    "install:prod": "npm ci --omit=dev"
   },
   "dependencies": {
     "lucide-react": "^0.344.0",
@@ -20,7 +22,7 @@
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
-    "helmet": "^7.1.0",
+    "helmet": "^7.1.5",
     "express-rate-limit": "^7.1.5"
   },
   "devDependencies": {
